--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
   ],
   "dependencies": {
     "angular": "~1.3.8",
-    "bootstrap": "~3.3.1",
-    "polymer": "Polymer/polymer#~0.5.2"
+    "bootstrap": "~3.3.1"
   }
 }
